--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.445.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
