--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -18,8 +18,11 @@ colorama==0.4.6
 coloredlogs==15.0.1
 dataclasses-json==0.6.7
 Deprecated==1.2.15
+dnspython==2.7.0
 durationpy==0.9
+email_validator==2.2.0
 fastapi==0.115.6
+fastapi-cli==0.0.6
 filelock==3.16.1
 filetype==1.2.0
 flatbuffers==24.3.25
@@ -46,6 +49,7 @@ humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
+Jinja2==3.1.4
 joblib==1.4.2
 jq==1.8.0
 jsonpatch==1.33
@@ -59,6 +63,7 @@ langchain-google-genai==2.0.7
 langchain-text-splitters==0.3.2
 langsmith==0.2.3
 markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 marshmallow==3.23.1
 mdurl==0.1.2
 mmh3==5.0.1
@@ -99,12 +104,14 @@ pyproject_hooks==1.2.0
 pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.19
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rich==13.9.4
+rich-toolkit==0.12.0
 rsa==4.9
 scikit-learn==1.6.0
 scipy==1.14.1
